# outcome

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
examples/simulation/: cubes.toml  hello_world.toml  simple_flock.toml
examples/simulation/mods/flock_core/: mod.outcome  mod.toml  mod.yaml
examples/simulation/mods/flock_rust/: mod.outcome  mod.toml
examples/simulation/mods/flock_rust/flock_dynlib/: Cargo.toml
examples/simulation/mods/flock_rust/flock_dynlib/src/: lib.rs
examples/simulation/mods/flock_rust/flock_service/: Cargo.toml
examples/simulation/mods/flock_rust/flock_service/src/: main.rs
examples/simulation/mods/hello_world/: mod.outcome  mod.toml
examples/simulation/mods/hello_world/hello_lib/: Cargo.toml
examples/simulation/mods/hello_world/hello_lib/src/: lib.rs
examples/simulation/mods/hello_world/hello_service/: Cargo.toml
examples/simulation/mods/hello_world/hello_service/src/: main.rs
examples/simulation/mods/position/: mod.outcome  mod.toml
examples/simulation/mods/quick_tour/: mod.outcome  mod.toml
examples/simulation/mods/simple/: mod.outcome  mod.toml
examples/simulation/scenarios/: cubes.toml
outcome-cli/: Cargo.toml  README.md
outcome-cli/src/: cli.rs  main.rs  test.rs  util.rs
outcome-cli/src/auto/: mod.rs
outcome-cli/src/init/: mod.rs  module.rs  proof.rs  scenario.rs
outcome-cli/src/interactive/: compl.rs  img_print.rs  local.rs  mod.rs  remote.rs
outcome-core/: Cargo.toml  README.md
outcome-core/benches/: barebones.rs  sim.rs
outcome-core/examples/: repl.rs  run_scenario.rs
outcome-core/src/: address.rs  arraystring.rs  component.rs  error.rs  lib.rs  query.rs  snapshot.rs  string.rs  util.rs  var.rs
outcome-core/src/distr/: central.rs  mod.rs  node.rs
outcome-core/src/entity/: mod.rs  storage.rs
outcome-core/src/machine/: error.rs  exec.rs  mod.rs
outcome-core/src/machine/cmd/: assembly.rs  equal.rs  eval.rs  get_set.rs  lib.rs  lua.rs  mod.rs  prefab.rs  print.rs  range.rs  register.rs  set.rs  sim.rs
outcome-core/src/machine/cmd/blocks/: call.rs  component.rs  end.rs  forin.rs  ifelse.rs  mod.rs  procedure.rs  state.rs
outcome-core/src/machine/cmd/flow/: _loop.rs  call.rs  component.rs  end.rs  forin.rs  ifelse.rs  mod.rs  procedure.rs  state.rs
outcome-core/src/machine/cmd/flow_control/: mod.rs
outcome-core/src/machine/cmd/flow_control/call/: mod.rs
outcome-core/src/machine/cmd/flow_control/end/: mod.rs
outcome-core/src/machine/cmd/flow_control/forin/: mod.rs
outcome-core/src/machine/cmd/flow_control/ifelse/: mod.rs
outcome-core/src/machine/cmd/flow_control/procedure/: mod.rs
outcome-core/src/machine/cmd/flow_control/state/: mod.rs
outcome-core/src/machine/script/: bridge.rs  mod.rs  parser.rs  preprocessor.rs  util.rs
outcome-core/src/model/: deser.rs  dyn_deser.rs  mod.rs
outcome-core/src/sim/: interface.rs  mod.rs  step.rs
outcome-net/: Cargo.toml  README.md
outcome-net/src/: client.rs  coord.rs  error.rs  lib.rs  organizer.rs  relay.rs  server.rs  service.rs  sig.rs  util.rs  worker.rs
outcome-net/src/msg/: coord_worker.rs  kind.rs  mod.rs  query.rs  server_client.rs  server_client_old.rs
outcome-net/src/server/: mod.rs  pull.rs  query.rs  turn.rs
outcome-net/src/socket/: laminar.rs  messageio.rs  mod.rs  tcp.rs  zmq.rs
outcome-net/src/transport/: mod.rs  nng.rs  zmq-modern.rs  zmq.rs
scenarios/barebones/: scenario.toml
scenarios/barebones/mods/simple/: mod.os
scenarios/barebones/mods/simple2/: mod.os  mod.toml
