[package]
name = "outcome-cli"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/outcome-rs/outcome"
homepage = "https://theoutcomeproject.com"
description = "CLI tool for running distributed simulations."
keywords = ["distributed", "simulation", "engine", "modeling", "cli"]
readme = "README.md"
license = "AGPL-3.0"

[[bin]]
name = "outcome"
path = "src/main.rs"

[features]
default = ["outcome-core/machine_sandbox", "psutils", "transport_zmq", "img_print"]
basic = ["outcome-core/default"]
complete = ["outcome-core/machine_complete", "psutils", "img_print"]

transport_nng = ["outcome-net/transport_nng"]
transport_zmq = ["outcome-net/transport_zmq"]

psutils = ["psutil"]
img_print = ["image"]


[dependencies]
outcome-core = { version = "0.1.0", path = "../outcome-core" }
outcome-net = { version = "0.1.0", path = "../outcome-net" }

clap = { version = "2.33.3", default-features = false, features = ["suggestions", "color"] }
serde = "1.0.117"
toml = "0.5.7"
anyhow = "1.0.33"
linefeed = "0.6.0"
colored = "2.0.0"
ansi_term = "0.12.1"
simplelog = "0.8.0"

psutil = { version = "3.2.0", optional = true, default-features = false, features = ["process"] }
image = { version = "0.23.10", default-features = false, features = ["png"], optional = true }