[package]
name = "outcome-cli"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/outcome-rs/outcome"
homepage = "https://theoutcomeproject.com"
description = "CLI tool for running distributed simulations."
keywords = ["distributed", "simulation", "engine", "modeling", "cli"]
readme = "README.md"
license = "AGPL-3.0"

[[bin]]
name = "outcome"
path = "src/main.rs"

[features]
default = ["outcome-core/machine_sandbox", "outcome-core/load_img", "psutils", "img_print", "zmq", "grids"]
#default = ["outcome-core/machine_sandbox", "outcome-core/load_img", "psutils", "img_print", "transport_nng", "grids"]
complete = ["outcome-core/machine_complete", "outcome-core/load_img", "psutils", "img_print", "grids"]

nng = ["outcome-net/nng_transport"]
zmq = ["outcome-net/zmq_transport"]

grids = ["outcome-core/grids", "outcome-net/grids"]

psutils = ["psutil"]
img_print = ["image"]
watcher = ["notify"]


[dependencies]
outcome-core = { version = "0.1.0", path = "../outcome-core"  }
outcome-net = { version = "0.1.0", path = "../outcome-net" }

clap = { version = "2.33.3", default-features = false, features = ["suggestions", "color"] }
serde = "1.0.117"
toml = "0.5.7"
anyhow = "1.0.33"
linefeed = "0.6.0"
colored = "2.0.0"
ansi_term = "0.12.1"
log = "0.4.11"
simplelog = "0.8.0"

notify = { version = "5.0.0-pre.4", optional = true }
psutil = { version = "3.2.0", optional = true, default-features = false, features = ["process"] }
image = { version = "0.23.11", default-features = false, features = ["png"], optional = true }
