[package]
name = "outcome-core"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/outcome-rs/outcome"
homepage = "https://theoutcomeproject.com"
description = "Easy to use distributed simulation engine."
keywords = ["distributed", "simulation", "engine", "modeling", "entity-component"]
categories = ["simulation", "game-development"]
readme = "README.md"
license = "AGPL-3.0"

[features]
default = []

machine = ["fasteval", "shlex", "getopts", "smallvec",  "rayon"] # enable runtime-level logic execution
machine_script = ["annotate-snippets"] # enable script processor
machine_dynlib = ["libloading"] # enable calls to dynamic libraries
machine_lua = ["rlua"] # enable calls to lua scripts
machine_sysinfo = ["sysinfo"] # expose system information to preprocessor and runtime

machine_sandbox = ["machine", "machine_script"] # don't allow execution of user-provided code
machine_complete = ["machine", "machine_script", "machine_dynlib", "machine_lua", "machine_sysinfo"]

short_stringid = [] # make the fixed-size string ids 10 chars long (default is 23)
load_img = ["image"] # enable loading images as grid data
# small_nums = [] # use 32 bit integers and floating point numbers instead of default 64 bit
# byte_var = [] # add 8 bit uint variable type
# static_model = [] # disallow changes to model after initialization

[dependencies]
toml = { version = "0.5.7", features = ["preserve_order"] }
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
serde = { version = "1.0.117", features = ["serde_derive"] }
#serde_yaml = "0.8.13"
bincode = "1.3.1"
semver = "0.11.0"
log = "0.4.11"
fnv = "1.0.7"
strsim = "0.10.0"
lz4 = "1.23.2"
id-pool = { version = "0.1.0", features = ["serde"] }
dunce = "1.0.1"
arrayvec = { version = "0.5.1", features = ["serde"] }
rand = "0.7.3"
thiserror = "1.0.21"

getopts = { version = "0.2.21", optional = true }
shlex = { version = "0.1.1", optional = true }
rayon = { version = "1.4.1", optional = true }
fasteval = { git = "https://github.com/adamsky/fasteval", optional = true }
smallvec = { version = "1.4.2", features = ["serde"], optional = true }
annotate-snippets = { version = "0.9.0", features = ["color"], optional = true }
sysinfo = { version = "0.15.3", optional = true }
rlua = { version = "0.17.0", optional = true }
libloading = { version = "0.6.4", optional = true }
image = { version = "0.23.10", default-features = false, features = ["png"], optional = true }

[dev-dependencies]
simplelog = "0.8.0"
criterion = "0.3.3"

[[bench]]
name = "barebones"
harness = false