[package]
name = "outcome-net"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/outcome-rs/outcome"
homepage = "https://theoutcomeproject.com"
description = "Networking for distributed outcome simulations."
keywords = ["distributed", "simulation", "engine", "modeling", "multiplayer"]
readme = "README.md"
license = "AGPL-3.0"

[features]
default = ["lz4", "laminar_transport"]
zmq_transport = ["zmq"]
nng_transport = ["nng"]
laminar_transport = ["laminar", "crossbeam-channel"]
messageio_transport = ["message-io"]

msgpack_encoding = ["rmp-serde"]

grids = []

# zmq-sys version collision if both zmq crates are present
#modern_zmq_socket = ["libzmq"]

[dependencies]
outcome-core = { version = "0.1.0", path = "../outcome-core" }

serde = "1.0.117"
thiserror = "1.0.21"
id-pool = { version = "0.2.0", default-features = false, features = ["u32", "serde"] }
log = "0.4.11"
fnv = "1.0.7"
num_enum = "0.5.1"
bincode = "1.3.1"
byteorder = "1.4.2"

lz4 = { version = "1.23.2", optional = true }

zmq = { version = "0.9.2", optional = true }
#libzmq = { version = "0.2.5", optional = true }
#nng = { version = "0.5.1", optional = true }
nng = { version = "1.0.0-rc.2", optional = true }
laminar = { version = "0.4.0", optional = true }
crossbeam-channel = { version = "0.4.0", optional = true }
message-io = { version = "0.5.1", optional = true }

rmp-serde = { version = "0.15.0", optional = true }
