[package]
name = "hello_lib"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"

[workspace]

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
outcome-core = { path = "../../../../../outcome-core", features = ["machine_sandbox"] }
#outcome-core = { path = "../../../../../outcome-core", features = ["machine_sandbox", "stack_stringid"] }
